fixed some alignments using new classes

--- a/css/main.css
+++ b/css/main.css
@@ -71,10 +71,17 @@ nav ul li {
 }
 
 /*-------------------------- CTA -------------------------------------------*/
-
+.cta {
+	clear: both;
+	width: 960px;
+	height: 326px;
+	background: yellow;
+}
 .cta img {
 	width: 400px;
-	margin: 30px;
+	margin: 27px;
+	border: 3px solid white;
+	border-radius: 5px;
 	float: left;
 }
 
@@ -94,7 +101,7 @@ h2 {
 }
 
 #signup_btn {
-	width: 150px;
+	width: 100px;
 	margin: 10px 30px 0 0;
 	float: right;
 }
@@ -119,38 +126,73 @@ h3 {
 }
 
 #g_images ul {
-	width: 893px;
+	width: 960px;
 	padding-top: 10px;
-	margin-left: 67px;
+	margin: 0;
 	float: left;
 }
 
-#g_images li {
-	margin-right: 67px;
-	border: 3px solid white;
-	border-radius: 5px;
+.image_g1 {
+	width: 150px;
+	margin: 0 100px 0 30px;
 	float: left;
 }
 
+.image_g2 {
+	width: 150px;
+	margin-right: 100px;
+	float: left;
+}
+
+.image_g3 {
+	width: 150px;
+	margin-right: 100px;
+	float: left;
+}
+
+.image_g4 {
+	width: 150px;
+	margin: 0;
+	float: left;
+}
 /*------------------------- Testimonies ------------------------------------------*/
 
 .testimony_list ul {
-	width: 893px;
-	margin: 20px 0 0 67px;
-	float: left;
-}
-.testimony_list li {
-	width: 150px;
-	margin-right: 73px;
+	width: 960;
+	margin-top: 30px;
 	float: left;
 }
 
+.g1_testimony {
+	width: 150px;
+	margin: 0px 100px 0 30px;
+	float: left;
+}
+
+.g2_testimony {
+	width: 150px;
+	margin-right: 100px;
+	float: left;
+}
+
+.g3_testimony {
+	width: 150px;
+	margin-right: 100px;
+	float: left;
+}
+
+.g4_testimony {
+	width: 150px;
+	float: left;
+}
 .testimony_paragraph {
-	width: 826px;
-	margin: 20px 0 0 67px;
+	width: 900px;
+	margin: 30px 30px 10px 30px;
+	float: left;
 }
 
 .testimony_john {
-	clear: left;
-	margin: 10px 0 0 67px;
+	width: 500px;
+	margin-left: 30px;
+	float: left;
 }
